# saferunnet

./: .gitignore  Cargo.toml  LICENSE  README.md  _update_lib.py  _update_lib2.py  _update_lib3.py  _wire_updater.py  _write_files.py  saferunnet.ini  test-saferunnet.ini
.codebase-memory/: artifact.json  graph.db.zst
apps/saferunnetd/: Cargo.toml
apps/saferunnetd/src/: forwarder.rs  lib.rs  main.rs  updater.rs
apps/saferunnetd/tests/: cli.rs  multi_node_integration.rs  real_udp_integration.rs  soak.rs
crates/saferunnet-app/: Cargo.toml
crates/saferunnet-app/src/: dns.rs  identity.rs  kernel.rs  lib.rs  link.rs  path.rs
crates/saferunnet-app/tests/: dns_resolver_module.rs  kernel_lifecycle.rs  link_message_module.rs  link_session_state_module.rs  path_manager_module.rs  session_coordinator.rs
crates/saferunnet-config/: Cargo.toml
crates/saferunnet-config/src/: lib.rs  model.rs
crates/saferunnet-config/tests/: bootstrap_routers.rs  config_loading.rs
crates/saferunnet-crypto/: Cargo.toml  README.md
crates/saferunnet-crypto/src/: lib.rs
crates/saferunnet-crypto/tests/: key_material.rs
crates/saferunnet-dht/: Cargo.toml
crates/saferunnet-dht/src/: lib.rs  lookup.rs  network.rs  routing.rs
crates/saferunnet-dns/: Cargo.toml  README.md
crates/saferunnet-dns/src/: dht_resolver.rs  resolver.rs
crates/saferunnet-dns/tests/: resolver.rs
crates/saferunnet-exit/: Cargo.toml  README.md
crates/saferunnet-exit/src/: exit_relay.rs  lib.rs
crates/saferunnet-exit/tests/: policy_tests.rs
crates/saferunnet-identity/: Cargo.toml  README.md
crates/saferunnet-identity/src/: lib.rs
crates/saferunnet-identity/tests/: file_store.rs
crates/saferunnet-link/: Cargo.toml  README.md
crates/saferunnet-link/src/: lib.rs  link_message.rs  path_control.rs  session_init.rs  session_path_switch.rs
crates/saferunnet-link/tests/: authenticated_link_message.rs  frame_codec_tests.rs  path_control.rs  session_init.rs  session_path_switch.rs
crates/saferunnet-path/: Cargo.toml  README.md
crates/saferunnet-path/src/: build.rs  health.rs  lib.rs  select.rs
crates/saferunnet-path/tests/: path_lifecycle.rs
crates/saferunnet-router/: Cargo.toml  README.md
crates/saferunnet-router/src/: lib.rs  onion.rs  path_build.rs  relay.rs
crates/saferunnet-router/tests/: benchmarks.rs  exit_enforcement_tests.rs  router_announcement.rs  router_integration_tests.rs
crates/saferunnet-rpc/: Cargo.toml  README.md
crates/saferunnet-rpc/src/: lib.rs  server.rs
crates/saferunnet-rpc/tests/: rpc_tests.rs
crates/saferunnet-service/: Cargo.toml  README.md
crates/saferunnet-service/src/: dht_intro.rs  exit_announce.rs  lib.rs  link_message.rs  path_build.rs  path_control.rs  router_announcement.rs  session_accept.rs  session_close.rs  session_init.rs  session_path_switch.rs  session_state.rs  session_types.rs  transit_hop.rs
crates/saferunnet-service/tests/: authenticated_link_message.rs  dht_intro.rs  exit_announce.rs  path_build.rs  path_control.rs  router_announcement.rs  service_message.rs  session_accept.rs  session_close.rs  session_init.rs  session_path_switch.rs  session_state.rs  transit_hop.rs
crates/saferunnet-testing/: Cargo.toml
crates/saferunnet-testing/src/: lib.rs  sim_network.rs  sim_transport.rs
crates/saferunnet-testing/tests/: project_layout.rs
crates/saferunnet-transport/: Cargo.toml
crates/saferunnet-transport/src/: lib.rs  session.rs  transport.rs  udp.rs
crates/saferunnet-transport/tests/: integration.rs
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md
saferunnet/: Cargo.toml
saferunnet-core/: Cargo.toml
saferunnet-core/src/: apple_ne.rs  bootstrap.rs  decaying_hashset.rs  lib.rs  link.rs  link_message.rs  nodedb.rs  oxen_bridge.rs  profiling.rs  service.rs  testing.rs  transport.rs  win_service.rs
saferunnet-core/src/address/: mapping.rs  mod.rs
saferunnet-core/src/auth/: mod.rs
saferunnet-core/src/config/: compat_lokinet.rs  definition.rs  mod.rs  model.rs  parser.rs
saferunnet-core/src/consensus/: mod.rs  reachability.rs
saferunnet-core/src/constants/: mod.rs
saferunnet-core/src/contact/: mod.rs
saferunnet-core/src/dht/: dht_intro.rs  lookup.rs  mod.rs  network.rs
saferunnet-core/src/dns/: dht_resolver.rs  message.rs  mod.rs  resolver.rs  server.rs  srv_data.rs
saferunnet-core/src/encoding/: mod.rs
saferunnet-core/src/handlers/: mod.rs
saferunnet-core/src/messages/: common.rs  dht.rs  fetch.rs  mod.rs  path.rs  session.rs
saferunnet-core/src/net/: mod.rs  netif.rs
saferunnet-core/src/net/dns_platform/: linux.rs  macos.rs  mod.rs  windows.rs
saferunnet-core/src/net/netif_platform/: linux.rs  macos.rs  mod.rs  windows.rs
saferunnet-core/src/net/platform/: linux.rs  macos.rs  mod.rs  windows.rs
saferunnet-core/src/net/tun/: linux.rs  macos.rs  mod.rs  windows.rs
saferunnet-core/src/path/: build.rs  health.rs  mod.rs  orchestrator.rs  path_control.rs  select.rs  svc_path_build.rs  transit_hop.rs
saferunnet-core/src/router/: mod.rs  onion.rs  path_build.rs  relay.rs  route_poker.rs  router_announcement.rs  router_types.rs
saferunnet-core/src/rpc/: admin.rs  commands.rs  mod.rs  oxen_client.rs  param_parser.rs  server.rs
saferunnet-core/src/session/: mod.rs  session_accept.rs  session_close.rs  session_init.rs  session_manager.rs  session_path_switch.rs  session_runtime.rs  session_state.rs  session_transport.rs  session_types.rs
saferunnet-core/src/util/: buffer.rs  file.rs  mod.rs  random.rs  time.rs
saferunnet-core/src/vpn/: exit_announce.rs  mod.rs  packet_io.rs  packet_router.rs  policy.rs
saferunnet-crypto/: Cargo.toml
saferunnet-observability/: Cargo.toml
saferunnet-platform/: Cargo.toml
saferunnet-platform/src/: lib.rs
saferunnet-transport/: Cargo.toml
saferunnet-transport/src/: event.rs  handshake.rs  lib.rs  link.rs  quic.rs  tcp_tunnel.rs  traits.rs  transport.rs
saferunnet/src/: capi.rs  dns.rs  identity.rs  kernel.rs  lib.rs  link.rs  main.rs  oxen.rs  path.rs  session.rs
scripts/: check-project-layout.ps1  check.ps1
test-data/: identity.key
(+56 files in other folders)
