[workspace]
resolver = "2"
members = [
    "saferunnet-core",
    "saferunnet-crypto",
    "saferunnet-transport",
    "saferunnet-platform",
    "saferunnet-observability",
    "saferunnet",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
ed25519-dalek = "2"
x25519-dalek = "2"
rand = "0.8"
thiserror = "2"
bytes = "1"
parking_lot = "0.12"
async-trait = "0.1"