[package]
name = "saferunnet-core"
version.workspace = true
edition.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-transport = { path = "../saferunnet-transport" }
saferunnet-observability = { path = "../saferunnet-observability" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true