[package]
name = "saferunnet-core"
version.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4"
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-observability = { path = "../saferunnet-observability" }
tokio = { workspace = true, features = ["sync", "net", "io-util"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
reqwest = { version = "0.12", features = ["json"] }
zeroize = "1.9"
rand_core = "0.6"
aes-gcm = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
] }

sha2 = "0.10"

