[package]
name = "saferunnet-transport"
version.workspace = true
edition.workspace = true

[dependencies]
saferunnet-platform = { path = "../saferunnet-platform" }
quinn.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
rcgen = "0.13"
