[package]
name = "saferunnet"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "saferunnet"

[[bin]]
name = "saferunnet"
path = "src/main.rs"

[dependencies]
saferunnet-core = { path = "../saferunnet-core" }
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-transport = { path = "../saferunnet-transport" }
saferunnet-platform = { path = "../saferunnet-platform" }
saferunnet-observability = { path = "../saferunnet-observability" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
parking_lot.workspace = true