[package]
name = "saferunnetd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "saferunnetd"
path = "src/main.rs"

[dependencies]
saferunnet-core = { path = "../../saferunnet-core" }
saferunnet-crypto = { path = "../../saferunnet-crypto" }
saferunnet-observability = { path = "../../saferunnet-observability" }
saferunnet-platform = { path = "../../saferunnet-platform" }
saferunnet-transport = { path = "../../saferunnet-transport" }
saferunnet = { path = "../../saferunnet" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true

[features]
soak = []
