[package]
name = "saferunnet-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-compat-lokinet = { path = "../saferunnet-compat-lokinet" }
saferunnet-core = { path = "../saferunnet-core" }
thiserror.workspace = true
