[package]
name = "saferunnet-dht"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-identity = { path = "../saferunnet-identity" }
saferunnet-service = { path = "../saferunnet-service" }
saferunnet-transport = { path = "../saferunnet-transport" }
saferunnet-dns = { path = "../saferunnet-dns" }
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
saferunnet-testing = { path = "../saferunnet-testing" }