[package]
name = "saferunnet-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-core = { path = "../saferunnet-core" }
saferunnet-crypto = { path = "../saferunnet-crypto" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
saferunnet-testing = { path = "../saferunnet-testing" }
