[package]
name = "saferunnet-exit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
saferunnet-testing = { path = "../saferunnet-testing" }
