[package]
name = "saferunnet-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
thiserror.workspace = true
zeroize = "1.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
] }
