[package]
name = "saferunnet-link"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-identity = { path = "../saferunnet-identity" }
saferunnet-service = { path = "../saferunnet-service" }
thiserror.workspace = true

[dev-dependencies]
