[package]
name = "saferunnet-router"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-identity = { path = "../saferunnet-identity" }
saferunnet-link = { path = "../saferunnet-link" }
saferunnet-service = { path = "../saferunnet-service" }
saferunnet-exit = { path = "../saferunnet-exit" }
saferunnet-path = { path = "../saferunnet-path" }
saferunnet-core = { path = "../saferunnet-core" }
aes-gcm.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
saferunnet-dht = { path = "../saferunnet-dht" }
saferunnet-testing = { path = "../saferunnet-testing" }
