[package]
name = "saferunnet-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saferunnet-core = { path = "../saferunnet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tracing.workspace = true

[dev-dependencies]
saferunnet-testing = { path = "../saferunnet-testing" }