[package]
name = "saferunnet-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-identity = { path = "../saferunnet-identity" }
thiserror.workspace = true
