[package]
name = "saferunnet-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
saferunnet-transport = { path = "../saferunnet-transport" }
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true