[package]
name = "saferunnet-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saferunnet-core = { path = "../saferunnet-core" }
saferunnet-crypto = { path = "../saferunnet-crypto" }
saferunnet-identity = { path = "../saferunnet-identity" }
saferunnet-service = { path = "../saferunnet-service" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
saferunnet-testing = { path = "../saferunnet-testing" }
